assets/style.css
/* ... */
body > .contents {
  flex-grow: 1;
  margin-block-start: var(--space-s-m);
}

body > footer {
  display: flex;
  flex-wrap: wrap;
  inline-size: 100%;
  margin-block-start: var(--space-2xl-3xl);
  margin-inline: auto;
  padding-block: var(--space-s-m);
  padding-inline: max(var(--grid-gutter), calc(var(--grid-gutter) + (100vi - var(--grid-max-width)) / 2));
  column-gap: var(--space-2xl-3xl);
  font-size: var(--step--1);
  row-gap: var(--space-xs-s);
  border-block-start: var(--width-divider-narrow) solid transparent;

  & > div {
    flex-basis: 100%;

    &:has(ul) {
      display: flex;
      flex-wrap: wrap;
      column-gap: var(--space-2xs);
    }

    ul {
      display: inline-flex;
      flex-wrap: wrap;
      column-gap: var(--space-2xs);
      row-gap: var(--space-3xs-2xs);
    }

    li:not(:first-child) {
      margin-block-start: 0;
    }
  }

  & ul {
    margin-block-start: 0;
    padding-inline-start: 0;
    list-style-type: none;
  }

  & > ul {
    max-inline-size: 30ch;
  }

  & li:not(:first-child) {
    margin-block-start: var(--space-3xs);
  }

  & :where(small, .small) {
    flex-basis: 100%;
    font-size: var(--step--2);
    text-wrap-style: pretty;
  }

  & img {
    block-size: var(--space-m-l);
  }

  & .contacts :any-link:not(:hover) {
    @media screen {
      text-decoration-line: none;
    }
  }

  & :any-link {
    color: currentcolor;
  }

  @media print {
    border-color: var(--color-divider-light);
  }

  @media screen {
    background-color: var(--color-black-10);
  }
}

.orcid,
.orcid-id {
  &:any-link {
    color: inherit;

    :not(.byline > span) > & {
      &:not(:hover) {
        text-decoration-line: none;
      }
    }
  }

  @media screen {
    padding-left: calc(0.4ch + 1em + 0.1ch); /* stylelint-disable-line logical-css/require-logical-properties */
    background-image: url('logos/orcid.svg');
    background-repeat: no-repeat;
    background-position: left 0.1ch bottom 40%;
    background-size: 1em;

    .byline & {
      padding-right: calc(0.4ch + 1em + 0.1ch); /* stylelint-disable-line logical-css/require-logical-properties */
      padding-left: 0; /* stylelint-disable-line logical-css/require-logical-properties */
      background-position: right 0.1ch bottom 40%;

      @media (forced-colors: active) {
        padding: 0;
      }
    }

    @media (forced-colors: active) {
      padding: 0;
      background-image: none;
    }
  }
}

.orcid-id {
  text-wrap-mode: nowrap;
}

.slack {
  display: flex;
  column-gap: var(--space-3xs);
  user-select: all;

  img {
    align-self: center;
    inline-size: 1.3em;
    border-radius: var(--width-divider);

    @media screen {
      @media (forced-colors: active) {
        forced-color-adjust: auto;
        background-color: transparent;
        box-shadow: none;
      }
    }
  }
}

img {
  object-fit: contain;
  display: block;
  block-size: auto;
  max-block-size: 100%;
  inline-size: auto;
  max-inline-size: 100%;

  :--heading:not(.visually-hidden) + & {
    margin-block-start: var(--space-xs);
  }

  @media screen {
    @media (forced-colors: active) {
      forced-color-adjust: none;
      background-color: var(--color-background);
      box-shadow: 0 0 0 var(--space-3xs) var(--color-background);
    }
  }
}

nav {
  .contents > & {
    display: flex;
    justify-content: space-between;
  }

  section > & {
    display: flex;
    justify-content: flex-end;
    margin-block-start: var(--space-2xs);
  }

  :not(.contents, .header, section, header) > & {
    margin-block-start: var(--space-m);
  }
}

.pager {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  font-weight: 500;

  & :any-link {
    padding-block: var(--space-3xs);
    padding-inline: var(--space-2xs);

    &:focus-visible {
      outline-offset: 0;
    }
  }

  & [rel='prev'] {
    display: inline-flex;
    align-items: center;

    &::before {
      content: '←\00a0';
    }
  }

  & [rel='next'] {
    display: inline-flex;
    align-items: center;

    &::after {
      content: '\00a0→';
    }
  }

  @media print {
    display: none;
  }

  @media screen {
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
  }
}

header {
  :not(body, .contents, li > article) > & {
    & :any-link {
      color: inherit;
    }

    & + :not(.visually-hidden, :--list),
    & + .visually-hidden + * {
      margin-block-start: var(--space-m-l);
    }
  }

  section & {
    margin-block-start: var(--space-2xl-3xl);

    &:has(+ :--list) {
      border-block-end: var(--width-divider-narrow) solid var(--color-red-60);
      padding-block-end: var(--space-4xs);
    }
  }
}

article {
  :not(aside) > & {
    margin-block-start: var(--space-s-l);

    section & {
      margin-block-start: var(--space-xs-s);
    }
  }

  main > &:not(.preview) {
    margin-block-start: var(--space-xl-2xl);
    border-block-start: var(--width-divider) solid var(--color-divider-light);

    & > :first-child {
      margin-block-start: var(--space-s-m);
    }
  }

  & > header > :first-child {
    margin-block-start: 0;
  }
}

:--scroller {
  overflow: auto;

  & > :first-child {
    margin-block-start: 0;
  }

  :is(:--heading, details) + & {
    margin-block-start: var(--space-2xs-xs);
  }
}

:--heading {
  max-inline-size: 100%;
  font-weight: 700;
  line-height: 1.2;
  text-wrap-style: pretty;

  &:where(:--arabic-script) {
    line-height: 1.4;
  }

  :where(:not(caption, legend)) > & {
    margin-block-start: var(--space-s-m);
  }

  :--heading + & {
    margin-block-start: var(--space-2xs-xs);
  }

  :where(.summary-card, :--scroller) + & {
    margin-block-start: var(--space-m-l);
  }
}

h1 {
  font-size: var(--step-5);
  letter-spacing: -0.015em;

  form & {
    font-size: var(--step-4);
  }
}
/* ... */

